// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The \`withVue\` decorator should destroy the vue component 1`] = `
"
    <div>
      <p>Hello world</p>
    </div>
  "
`;

exports[`The \`withVue\` decorator should instantiate the vue component 1`] = `
"
    <div>
      <div data-ref=\\"vue\\"></div>
    </div>
  "
`;

exports[`The \`withVue\` decorator should mount the vue component 1`] = `
"
    <div>
      <p>Hello world</p>
    </div>
  "
`;

exports[`The \`withVue\` decorator should work with config defined in a getter 1`] = `""`;
